--- a/iniadmin/htdocs/css/iniadmin.css
+++ b/iniadmin/htdocs/css/iniadmin.css
@@ -1,21 +1,29 @@
-table.ini {
-	width: 100%;
-	margin-bottom: 1em;
+ul.ini {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  width: 100%;
 }
-
-table.ini td {
-	width: 30%;
-	vertical-align: top;
-	padding-right: 0.25em;
+.ini li {
+  width: 30%;
+  display: inline;
+  float: left;
+  margin: 0.5em;
+  padding-right: 0.25em;
 }
-
+.ini li.align2 {
+  clear: right;
+}
 .ini input[type="text"] {
-	width: 90%;
+  width: 90%;
 }
-
 .ini div.help {
-	margin-left: 1em;
-	font-size: small;
+  font-size: small;
 }
-
-.ini div.help p { margin: 0.5em; }
+.ini div.help p {
+  margin: 0.5em;
+}
+.ini input[type="submit"] {
+  clear: both;
+  float: left;
+}
