--- a/iniadmin/htdocs/css/iniadmin.css
+++ b/iniadmin/htdocs/css/iniadmin.css
@@ -6,12 +6,9 @@ ul.ini {
 .ini li {
   width: 30%;
   display: inline;
-  float: left;
   margin: 0.5em;
+  float: left;
   padding-right: 0.25em;
-}
-.ini li.align2 {
-  clear: right;
 }
 .ini input[type="text"] {
   width: 90%;
@@ -22,7 +19,6 @@ ul.ini {
 .ini div.help p {
   margin: 0.5em;
 }
-.ini input[type="submit"] {
-  clear: both;
-  float: left;
+.ini.buttons {
+  clear: left;
 }
