Added patch from gjo that adds INI options to block editing of some options and treat some options as passwords.
git-svn-id: http://trac-hacks.org/svn/iniadminplugin/0.11@3915 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/iniadmin/templates/iniadmin.html
+++ b/iniadmin/templates/iniadmin.html
@@ -32,6 +32,9 @@
                   <label><input type="radio" name="${option.name}" value="true" checked="${option.value == 'true' or None}" /> true</label>
                   <label><input type="radio" name="${option.name}" value="false" checked="${option.value == 'false' or None}" /> false</label>
                 </div>
+                <div class="text" py:when="option.type == 'password'">
+                  <input type="password" name="${option.name}" value="${option.value}" />
+                </div>
                 <div class="text" py:otherwise="">
                   <input type="text" name="${option.name}" value="${option.value}" />
                 </div>
